# FactorLab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  FAQ.md  QUICKSTART.md  README.md
examples/: demo_full.html  demo_quick.html  sample_factors.json
scripts/: download_data.py  schema.sql
src/: __init__.py  backtest.py  batch_pipeline.py  calibration.py  check_code_uniqueness.py  checker.py  combo_engine.py  config.py  data_fetcher.py  data_fetcher_v2.py  database.py  diagnose_dims.py  diagnose_round.py  diversity_gate.py  engine.py  factor_draft.py  html_reporter.py  logger.py  main.py  memory_manager.py  migration.py  nl_query.py  pipeline.py  program_updater.py  robustness_checker.py  sandbox.py  score.py  summary_engine.py  verify_template_orthogonality.py
tests/: conftest.py  test_ast_whitelist.py  test_classic_factors.py  test_fuse_break.py  test_my_factor.py  test_phase3b_integration.py  test_phase3c_integration.py
