[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factorlab"
version = "0.1.0"
description = "AI-driven A-share quantitative factor mining system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "YippeeXu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/YippeeXu/FactorLab"
Repository = "https://github.com/YippeeXu/FactorLab"

[tool.setuptools.packages.find]
where = ["src"]
